[tool.poetry]
name = "homura-art"
version = "0.1.0"
description = "image viewer and organizer"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homura_art"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PySide6 = "^6.4.0.1"
pillow-simd = "^9.0.0.post1"
hydrus-api = "^4.0.0"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyright = "^1.1.279"
isort = "^5.10.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
homura-art = "homura_art.__main__:main"

[tool.isort]
profile = "black"
